# MotorActuator

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  flash.sh
Application/Robotchassis/: STM32G431VBTx_FLASH.ld  startup_stm32g431xx.s  target-def.cmake
Application/Robotchassis/Inc/: communicate.h  main.h  peripherals.h  stm32g4xx_hal_conf.h  syslog.h  systicks.h
Application/Robotchassis/Src/: communicate.c  main.c  peripherals.c  stm32g4xx_hal_msp.c  systicks.c
Drivers/CMSIS/: CMakeLists.txt
Drivers/Device/: ._CMakeLists.txt  CMakeLists.txt
Drivers/Device/Inc/: as5600.h  common.h  device.h  icm20602.h  imu_common.h  mpu6050.h  syslog.h  tle5012b.h  usart.h
Drivers/Device/Src/: as5600.c  icm20602.c  mpu6050.c  usart.c
Drivers/Device/platform/: peripherals.c  peripherals.h  systicks.c  systicks.h
Drivers/STM32G4xx_HAL_Driver/: ._CMakeLists.txt  CMakeLists.txt
Drivers/STM32G4xx_HAL_Driver/Src/: stm32g4xx_ll_fmac.c
Framework/: CMakeLists.txt
Framework/Filter/Inc/: ahrs.h  imu_calibration.h
Framework/Filter/Src/: ahrs.c  imu_calibration.c
Framework/MotorControl/Inc/: foc.h  motor_control_base.h  motor_control_driver.h  motor_control_interface.h  motor_control_param.h  platform.h
Framework/MotorControl/Src/: foc.c  motor_control_base.c  motor_control_driver.c  motor_control_interface.c
Middlewares/: CMakeLists.txt
Middlewares/MotorControl/Common/Inc/: abs_encoder.h  bus_voltage_sensor.h  circle_limitation.h  digital_output.h  enc_align_ctrl.h  encoder_speed_pos_fdbk.h  fast_div.h  feed_forward_ctrl.h  flux_weakening_ctrl.h  hall_speed_pos_fdbk.h  ics_dd_pwmncurrfdbk.h  inrush_current_limiter.h  max_torque_per_ampere.h  mc_math.h  mc_position.h  mc_tuning.h  mc_type.h  motor_power_measurement.h  mp_one_touch_tuning.h  mp_self_com_ctrl.h  ntc_temperature_sensor.h  open_loop.h  pid_regulator.h  pid_regulator_float.h  pqd_motor_power_measurement.h  pwm_curr_fdbk.h  r1_dd_pwm_curr_fdbk.h  r_divider_bus_voltage_sensor.h  ramp_ext_mngr.h  revup_ctrl.h  speed_pos_fdbk.h  speed_torq_ctrl.h  state_machine.h  sto_cordic_speed_pos_fdbk.h  sto_pll_speed_pos_fdbk.h  sto_speed_pos_fdbk.h  trajectory_ctrl.h  virtual_bus_voltage_sensor.h  virtual_speed_sensor.h
Middlewares/MotorControl/Common/Src/: abs_encoder.c  bus_voltage_sensor.c  circle_limitation.c  digital_output.c  enc_align_ctrl.c  encoder_speed_pos_fdbk.c  fast_div.c  feed_forward_ctrl.c  flux_weakening_ctrl.c  hall_speed_pos_fdbk.c  inrush_current_limiter.c  max_torque_per_ampere.c  mc_math.c  mc_position.c  motor_power_measurement.c  ntc_temperature_sensor.c  open_loop.c  pid_regulator.c  pid_regulator_float.c  pqd_motor_power_measurement.c  pwm_curr_fdbk.c  r_divider_bus_voltage_sensor.c  ramp_ext_mngr.c  revup_ctrl.c  speed_pos_fdbk.c  speed_torq_ctrl.c  state_machine.c  sto_cordic_speed_pos_fdbk.c  sto_pll_speed_pos_fdbk.c  trajectory_ctrl.c  virtual_bus_voltage_sensor.c  virtual_speed_sensor.c
Middlewares/MotorControl/Platform/Inc/: ics_g4xx_pwm_curr_fdbk.h  mc_stm_types.h  r3_2_g4xx_pwm_curr_fdbk.h  r3_3_g4xx_pwm_curr_fdbk.h  regular_conversion_manager.h
Middlewares/MotorControl/Platform/Src/: ics_g4xx_pwm_curr_fdbk.c  r3_2_g4xx_pwm_curr_fdbk.c  r3_3_g4xx_pwm_curr_fdbk.c  regular_conversion_manager.c
OS/threadx/: ._CMakeLists.txt
OS/threadx/common/: CMakeLists.txt
OS/threadx/ports/cortex_m4/gnu/: CMakeLists.txt
algorithm/: CMakeLists.txt
algorithm/Inc/: ahrs_deprecated.hpp  algorithm_utils.hpp  foc_controller.hpp  open_loop_controller.hpp  pid_controller.hpp
algorithm/Src/: foc_controller.cpp  open_loop_controller.cpp  pid_controller.cpp
app/Inc/: main.hpp
app/Src/: main.cpp
cmake/: jlink-flash-fw-standalone.jlink  stm32-gcc-flags.cmake  stm32-gcc-jlink.cmake  stm32-gcc-postbuild.cmake  target-def.cmake
device/: CMakeLists.txt
device/Inc/: absolute_encoder.hpp  angle_encoder_abstract.hpp  icm42688.hpp  impl_adc.hpp  impl_pwm.hpp  imu_abstract.hpp
device/Src/: absolute_encoder.cpp  angle_encoder_abstract.cpp  icm42688.cpp  impl_adc.cpp  impl_pwm.cpp  imu_abstract.cpp  linear_hall_angle_encoder.cpp
driver/: CMakeLists.txt
driver/Inc/: as5600.h  driver.h  icm20602.h  imu_common.h  mpu6050.h  peripherals.h  peripherals_it.h  syslog.h  systicks.h  tle5012b.h  usart.h  util.h
driver/Src/: as5600.c  hal_msp.c  icm20602.c  mpu6050.c  peripherals.c  peripherals_it.c  systicks.c  tle5012b.c  usart.c  util.c
framework/: CMakeLists.txt
framework/Inc/: motor_control_factory.hpp
framework/Src/: motor_control_factory.cpp
hal/STM32G4/CMSIS/: CMakeLists.txt
hal/STM32G4/CMSIS/DSP/Source/CommonTables/: CommonTables.c
hal/STM32G4/STM32G4xx_HAL_Driver/: CMakeLists.txt  system_stm32g4xx.c
hal/STM32G4/STM32G4xx_HAL_Driver/Inc/: stm32g4xx_hal_conf.h
middlewares/: CMakeLists.txt
middlewares/motor_control/motor/Inc/: bldc_motor.hpp  dc_motor.hpp  motor_abstract.hpp
middlewares/motor_control/motor/Src/: bldc_motor.cpp  dc_motor.cpp
os/: CMakeLists.txt
os/threadx/: CMakeLists.txt
os/threadx/ports/cortex_m4/gnu/src/: tx_initialize_low_level.S
test/sample/Src/: bldc_velocity_control.cpp
util/: CMakeLists.txt
util/Inc/: time_util.h
